# HieraticAI

./: .gitattributes  .gitignore  AUTHORS  GETTING_STARTED.md  LICENSE  README.md  TECHNICAL_GUIDE.md  environment.yml  install.py  pyproject.toml  requirements.txt
AKU Westcar Scraping/json/: 11787.json  11788.json  11790.json  11791.json  11792.json  11793.json  11794.json  11795.json  11796.json  11797.json  11799.json  11805.json  11806.json  11808.json  11809.json  11811.json  11813.json  11817.json  11818.json  11819.json  11822.json  11825.json  11831.json  11832.json  11833.json  11836.json  11837.json  11841.json  11843.json  11846.json  11847.json  11848.json  11849.json  11850.json  11851.json  11852.json  11853.json  11860.json  11861.json  11862.json  (+393 more)
AKU Westcar Scraping/txt/: 11791.txt  11792.txt  11793.txt  11796.txt  11797.txt  11800.txt  11801.txt  11802.txt  11803.txt  11806.txt  11807.txt  11809.txt  11811.txt  11812.txt  11816.txt  11817.txt  11818.txt  11819.txt  11820.txt  11824.txt  11825.txt  11829.txt  11831.txt  11832.txt  11833.txt  11836.txt  11837.txt  11838.txt  11839.txt  11840.txt  11843.txt  11844.txt  11846.txt  11849.txt  11851.txt  11852.txt  11853.txt  11858.txt  11859.txt  11860.txt  (+418 more)
TLA_Data/: TLA_Scraping.txt
configs/: databases.yaml  evaluation.yaml  training.yaml
data/: aku_database_summary.txt  aku_gardiner_index.json  annotations.json  dataset_validation_report.json  tla_lemma_index.json  tla_lemma_summary.txt
external_data/AKU Westcar Scraping/json/: 11789.json  11800.json  11801.json  11802.json  11803.json  11804.json  11807.json  11812.json  (+340 more)
external_data/TLA_Data/: TLA_Scraping.txt
hieroglyphs_dataset/test/: annotations.json
hieroglyphs_dataset/train/: annotations.json
hieroglyphs_dataset/train_augmented/: annotations.json
hieroglyphs_dataset/val/: annotations.json
notebooks/: 02_Training.ipynb  03_Evaluation.ipynb  04_Inference.ipynb  05_Improved_Training.ipynb  README.md
output/improved_training_20250822_200344/: coco_instances_results.json  coco_instances_results_FIXED.json  hieroglyph_test_improved_coco_format.json  instances_predictions.pth  model_best_map_31.205_iter_10999.pth  model_final.pth  training_improvements.json
results/: predictions_analysis.csv
scripts/: aku_data_indexer.py  category_mapping_visualizations.py  compute_accuracy_with_fixed_mappings.py  compute_prediction_accuracy.py  install.sh  prediction_validator.py  setup_enhanced_validation.py  tla_data_indexer.py  train_hieroglyph_detection_robust.py
src/hieratic_ai/: __init__.py
tests/: test_dataset_validation.py
tools/: __init__.py
tools/data/: aku_data_indexer.py  tla_data_indexer.py
tools/evaluation/: category_mapping_visualizations.py  compute_accuracy_with_fixed_mappings.py  compute_prediction_accuracy.py  generate_workflow_diagrams.py
tools/setup/: install.sh  setup_enhanced_validation.py
tools/training/: __init__.py  train.py
tools/validation/: prediction_validator.py
utils/: dataset_validator.py  fix_category_id_offset.py  verify_dataset_consistency.py
(+350 files in other folders)
