[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hieratic-ai"
version = "1.0.0"
description = "AI-powered hieratic character recognition and validation for ancient Egyptian manuscripts"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Margot Belot", email = "margotbelot@icloud.com"},
    {name = "Domino Colyer", email = "dominic23@zedat.fu-berlin.de"},
]
keywords = ["egyptology", "hieratic", "ai", "computer-vision", "digital-humanities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pillow>=10.0.0",
    "streamlit>=1.25.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
"Homepage"= "https://github.com/MargotBelot/HieraticAI"
"Bug Reports"= "https://github.com/MargotBelot/HieraticAI/issues"
"Source"= "https://github.com/MargotBelot/HieraticAI"
"Documentation"= "https://github.com/MargotBelot/HieraticAI/blob/main/README.md"

[project.scripts]
# hieratic-train = "hieratic_ai.core.train:main"  # Module not currently implemented
hieratic-validate = "tools.validation.prediction_validator:main"
hieratic-index-aku = "tools.data.aku_data_indexer:main"
hieratic-index-tla = "tools.data.tla_data_indexer:main"
hieratic-evaluate = "tools.evaluation.compute_prediction_accuracy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "hieratic_ai*"]

[tool.setuptools.package-dir]
""= "."

[tool.setuptools.package-data]
"*"= ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]
